--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,2 @@
-Maria Nalukwago <mariatendo84@gmail.com> Blessing Nwalozie<please enter your email address>
+Maria Nalukwago < mariatendo84@gmail.com >
+Blessing Nwalozie < blessingnwalozie@gmail.com >
